--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-  <div class="container">
+  <div class="container" id="img-wide">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -60,9 +60,14 @@
         </a>
       </div>
   </div>
-
- <div class="container">
-     <h1>Smartphone</h1>
+<div class="container" id="smartphone">
+        <div class="d-flex justify-content-between">
+        <h5>Smartphone</h5> 
+         <a style="color:red" href="#">See All</a>
+    </div>
+</div>
+ <div class="container" id="Product">
+   
      <div class="card-deck">
         <div class="card text-center">
           <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
@@ -93,9 +98,16 @@
         </div>
       </div>
  </div>
+
+ <div class="container" id="smartphone">
+        <div class="d-flex justify-content-between">
+        <h5>Smartphone</h5> 
+        <a style="color:red" href="#">See All</a>
+        </div>
+</div>
+
  <div class="container">
- <h1>Smartphone</h1>
- <div class="card-deck">
+    <div class="card-deck">
     <div class="card text-center">
       <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -105,7 +117,7 @@
        <button type="button" class="btn btn-dark">BUY NOW →</button>
       </div>
     </div>
-    <div class="card text-center">
+    <div class="card text-center" id="Product">
       <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Razer blade 15</h5>
@@ -126,17 +138,13 @@
   </div>
 </div>
 <div class="container">
-   <div class="row">
-       <div class="col-12 text-center">
-        <h1>Categories</h1>
-    
-       </div>
-   </div>
+ <h1 style="text-align: center;" > Categories</h1>
+ <div class="bar"></div>
 </div>
-<div class="container">
+<div class="container" >
     <div class="row">
-        <div class="col-3 text-center">
-           <div class="d-flex align-self-center">
+        <div class="col-3 d-flex align-items-center justify-content-center text-center">
+           <div>
             <img src="images/Categories/bag.png" alt="">
             <h2>bag</h2>
            </div>
