--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-3">
-              <img src="images/logo.png" alt="">
+              <img style="width: 50%;" src="images/logo.png" alt="">
             </div>
             <div class="col-9">
                 <ul class="nav justify-content-end">
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-  <div class="container" id="img-wide">
+  <div class="container carousel-bg">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -41,13 +41,46 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+            <div class="row">
+                <div class="col-6  d-flex align-items-center justify-content-center">
+                   <div>
+                    <h1>mackbook pro</h1>
+                    <p>this is the leastet mackbook pro in world</p>
+                    <button type="button" class="btn btn-dark">BUY NOW →</button>
+                   </div>
+                </div>
+                <div class="col-6">
+                    <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+          <div class="row">
+              <div class="col-6  d-flex align-items-center justify-content-center">
+             <div>
+                <h1>mackbook pro</h1>
+                <p>this is the leastet mackbook pro in world</p>
+                <button type="button" class="btn btn-dark">BUY NOW →</button>
+             </div>
+              </div>
+              <div class="col-6">
+                <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+              </div>
+          </div>
           </div>
           <div class="carousel-item">
-            <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+         <div class="row">
+             <div class="col-6  d-flex align-items-center justify-content-center">
+                 <div>
+                    <h1>mackbook pro</h1>
+                    <p>this is the leastet mackbook pro in world</p>
+                    <button type="button" class="btn btn-dark">BUY NOW →</button>
+                 </div>
+             </div>
+             <div class="col-6">
+                <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+             </div>
+         </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
