--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="top-section">
         <div class="row">
             <div class="col-3">
               <img style="width: 50%;" src="images/logo.png" alt="">
@@ -93,21 +93,22 @@
         </a>
       </div>
   </div>
+
 <div class="container" id="smartphone">
         <div class="d-flex justify-content-between">
         <h5>Smartphone</h5> 
-         <a style="color:red" href="#">See All</a>
-    </div>
-</div>
- <div class="container" id="Product">
-   
-     <div class="card-deck">
-        <div class="card text-center">
-          <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">iphone 11 Pro</h5>
-            <p class="card-text">this is the high buddget in the world</p>
-           <h5>$999</h5>
+            <a style="color:red" href="#">See All</a>
+            </div>
+            </div>
+            <div class="container" id="Product">
+    
+            <div class="card-deck">
+            <div class="card text-center">
+            <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">iphone 11 Pro</h5>
+                <p class="card-text">this is the high buddget in the world</p>
+            <h5>$999</h5>
            <button type="button" class="btn btn-dark">BUY NOW →</button>
           </div>
         </div>
@@ -134,47 +135,48 @@
 
  <div class="container" id="smartphone">
         <div class="d-flex justify-content-between">
-        <h5>Smartphone</h5> 
+        <h5>Laptop</h5> 
         <a style="color:red" href="#">See All</a>
         </div>
 </div>
 
  <div class="container">
-    <div class="card-deck">
-    <div class="card text-center">
-      <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
-      <div class="card-body">
+        <div class="card-deck">
+        <div class="card text-center">
+        <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
         <h5 class="card-title">asus vivo book</h5>
-        <p class="card-text">this is the wonderfull laptop in the world</p>
-       <h5>$999</h5>
-       <button type="button" class="btn btn-dark">BUY NOW →</button>
+         <p class="card-text">this is the wonderfull laptop in the world</p>
+        <h5>$999</h5>
+        <button type="button" class="btn btn-dark">BUY NOW →</button>
+        </div>
+        </div>
+        <div class="card text-center" id="Product">
+        <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Razer blade 15</h5>
+            <p class="card-text">this is the most beautifull laptop in the world</p>
+            <h5>$2799</h5>
+            <button type="button" class="btn btn-dark">BUY NOW→</button>
+        </div>
+        </div>
+        <div class="card text-center">
+        <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">Xiami note book pro</p>
+        <h5>$699</h5>
+        <button type="button" class="btn btn-dark">BUY NOW →</button>
+        </div>
+       </div>
       </div>
-    </div>
-    <div class="card text-center" id="Product">
-      <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Razer blade 15</h5>
-        <p class="card-text">this is the most beautifull laptop in the world</p>
-        <h5>$2799</h5>
-        <button type="button" class="btn btn-dark">BUY NOW→</button>
-      </div>
-    </div>
-    <div class="card text-center">
-      <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"></h5>
-        <p class="card-text">Xiami note book pro</p>
-       <h5>$699</h5>
-       <button type="button" class="btn btn-dark">BUY NOW →</button>
-      </div>
-    </div>
-  </div>
 </div>
+
 <div class="container">
- <h1 style="text-align: center;" > Categories</h1>
- <div class="bar"></div>
-</div>
-<div class="container" >
+    <h1 style="text-align: center;" > Categories</h1>
+    <div class="bar"></div>
+    </div>
+    <div class="container" >
     <div class="row">
         <div class="col-3 d-flex align-items-center justify-content-center text-center">
            <div>
