--- a/index.html
+++ b/index.html
@@ -201,7 +201,25 @@
     </div>
 </div>
 
-
+<div class="container" id="Contact Us">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div style="background: rosybrown; border-radius: 6px; padding: 10px;" class="col-md-4">
+           <div class="form text-center">
+            <input type="text" placeholder="Name">
+            <input type="phone" placeholder="Phone">
+            <input type="emai" placeholder="Email">
+            <button type="submit">Submit</button>
+           </div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
+<div class="container text-center" id="footer-section" >
+    <footer>
+        <small >all right resuve gose to .........</small>
+    </footer>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
